# FFmpegTutorial

./: .gitignore  CMakeLists.txt  README.md  build.bat  clang-format-doc.md  const.cmake  custom-clang-format.md  git-commit-style.md  google-style-clang-format.md
FFmpegTutorialLinux/: CMakeLists.txt
FFmpegTutorialLinux/tutorials/: CMakeLists.txt  hw_decode.cpp  main.cpp
cmake/: install_helper.cmake
ffmpeg/ffmpeg-4.2.1/dynamic/include/libavutil/: ffversion.h
ffmpeg/ffmpeg-4.2.1/dynamic/lib/x86/: .gitattributes
public/: CMakeLists.txt  README.md
public/ability/: CMakeLists.txt
public/ability/foundation/: CMakeLists.txt
public/ability/foundation/foundation/byte/: byte_array_convert.cpp  int24_t.h
public/ability/foundation/foundation/file/: file_utils.cpp  file_utils.h
public/ability/logger/: CMakeLists.txt
tools/: CMakeLists.txt
tools/foundation/: CMakeLists.txt
tools/foundation/include/foundation/byte/: byte_array_convert.h
tools/foundation/src/byte/: int24_t.cpp
tools/logger/: CMakeLists.txt
tools/logger/include/logger/: logger.h
tutorial/: CMakeLists.txt
tutorial/resample/: CMakeLists.txt  array_convert.h  audio_resample_impl.cpp  audio_resample_impl.h  int24_t.cpp  int24_t.h  resample.cpp
tutorials/: CMakeLists.txt
tutorials/audio_crop/: CMakeLists.txt  main.cpp
tutorials/audio_decode/: CMakeLists.txt  main.cpp
tutorials/media_get_frame/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  main.cpp  tools.cpp  tools.h  video_decoder.cpp  video_decoder.h
tutorials/resample/: CMakeLists.txt  audio_resample.cpp  audio_resample.h  audio_resample_impl.cpp  audio_resample_impl.h  flexible_buffer.cpp  flexible_buffer.h  libav_audio_resample.cpp  libav_audio_resample.h  resample.cpp
tutorials/video_codec/: CMakeLists.txt  examples.cpp  examples.h  hw_decode.cpp  main.cpp
tutorials/video_decode/: CMakeLists.txt  examples.cpp  examples.h  hw_decode.cpp  main.cpp
tutorials/video_encode/: CMakeLists.txt  examples.cpp  examples.h  main.cpp
